[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art_assets/allSprites_default.png" type="Texture" id=1]
[ext_resource path="res://Turret.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 384, 149, 42, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 513, 68, 17, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18.1895, 18.5809 )

[sub_resource type="CircleShape2D" id=4]
radius = 909.36

[node name="Turret" type="KinematicBody2D"]
collision_layer = 128
collision_mask = 5
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]
rotation = -1.5708

[node name="base" type="Sprite" parent="Body"]
texture = SubResource( 1 )

[node name="barrel" type="Sprite" parent="Body"]
texture = SubResource( 2 )
offset = Vector2( -0.390728, 12.8123 )

[node name="Muzzle" type="Position2D" parent="Body/barrel"]
position = Vector2( -1.58204e-06, 36.1928 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="DetectPlayer" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 4 )

[node name="CanShootTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
[connection signal="timeout" from="CanShootTimer" to="." method="_on_CanShootTimer_timeout"]
